Einbettung Kontaktformular mit kontakt.php

--- a/contact.html
+++ b/contact.html
@@ -54,55 +54,38 @@
     </div>
 </section>
 
- <!--------CONTACT-------------------------->
 
- <iframe src="/php/kontakt.php" id="idIframe" onload="iframeLoaded()" style="border: none; width:100%;" allowfullscreen scrolling="no"> </iframe>
-<!--
 <section id="contact">
-  <div class="contact-img">
-    <img src="bilder/contactme_Zeichenfläche_1.svg" alt="">
-  </div>
-  <div class="contact-textbox">
-    <p>Feel free to contact me</p>
-    <br>
-    <p>Anne Dalchow <br>
-       Klemmstraße 8 <br>
-       04277 Leipzig <br>
-       <br>
-       E-Mail: contact@anne-dalchow.de <br>
-    </p>
-    <br>
-    <div class="link-icons">
-     <a href="https://github.com/anne-dalchow"><img src="bilder/minimize/github-01.svg" alt="Github Icon"></a>
-     <a href="https://www.linkedin.com/in/anne-dalchow/"><img src="bilder/minimize/linkedIn-01.svg" alt="LinkedIn Icon"></a>
+  <div class="contact-text">
+    <div class="contact-img">
+      <img src="bilder/contactme_Zeichenfläche_1.svg" alt="">
+    </div>
+    <div class="contact-textbox">
+      <p>Feel free to contact me</p>
+      <br>
+      <p>Anne Dalchow <br>
+         Klemmstraße 8 <br>
+         04277 Leipzig <br>
+         <br>
+         E-Mail: contact@anne-dalchow.de <br>
+      </p>
+      <br>
+      <div class="link-icons">
+       <a href="https://github.com/anne-dalchow"><img src="bilder/minimize/github-01.svg" alt="Github Icon"></a>
+       <a href="https://www.linkedin.com/in/anne-dalchow/"><img src="bilder/minimize/linkedIn-01.svg" alt="LinkedIn Icon"></a>
+      </div>
     </div>
   </div>
--->
 
 
+  
+ <!--------CONTACT-------------------------->
 
-<!--
  <div class="contact-form">
-   <form action="">
-    <input class="input-text" type="text" placeholder="*Name" required> <br>
-    <input class="input-text" type="email" placeholder="*E-Mail" required> <br>
-    <input class="input-text" type="text" placeholder="*Betreff" required> <br>
-    <textarea class="input-text" placeholder="*Nachricht" required></textarea> <br>
-    <div class="datenschutz">
-      <input type="checkbox" name="datenschutz" id="datenschutz" value="DS akzeptiert" required>
-        <div class="datenschutz-text">
-          * Ich habe die <a href="datenschutz.html" target="_blank">Datenschutzerklärung</a> zur Kenntnis genommen und akzeptiere diese.
-        </div>
-    </div> <br>
-    <input class="button" type="submit">
-   </form>
- </div>
- -->
-
-
-<!--
+  <iframe src="/php/kontakt.php" id="idIframe" onload="iframeLoaded()" style="border: none; width:100%;" allowfullscreen scrolling="no"> </iframe>
+</div>
 </section>
--->
+
 
 
 
